# avukat-mcp

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  SECURITY.md  main.py  mcp.json.example  pyproject.toml
data/kurallar/: cocuk_koruma.json  eticaret_tr.json  gdpr.json  iletisim_pazarlama.json  kvkk.json  odeme_guvenlik.json  telif_lisans.json
docs/: GORSEL_DEGISTIRICI.md
scripts/: haftalik_guncelle.py
src/: server.py
src/gorsel_degistirici/: __init__.py  degistir.py  gorsel_islem.py  unsplash.py  wp_api.py  yedekleme.py
src/mevzuat/: __init__.py  guncelleme.py  mcp_koprusu.py  mevzuat_arayici.py  onbellek.py  scraper.py  yerel_kurallar.py
src/tarayicilar/: __init__.py  cocuk.py  eticaret.py  gizlilik.py  guvenlik.py  iletisim.py  lisans.py  temel.py  veri_toplama.py
