[project]
name = "avukat-mcp"
version = "1.0.0"
description = "Türkiye ve uluslararası hukuki uyumluluk (KVKK, GDPR, E-Ticaret, PCI-DSS, COPPA, FSEK) MCP sunucusu"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "KEŞİF Ekosistem" },
]
keywords = ["mcp", "kvkk", "gdpr", "compliance", "legal", "turkey", "security"]
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "playwright>=1.50.0",
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
scraper = [
    "playwright>=1.50.0",
]

[project.scripts]
avukat-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
